Paths to Path